--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon backend/server.js"
+    "start": "concurrently \"nodemon backend/server.js\" \"npm start --prefix client\""
   },
   "author": "Berkay Yılmaz",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.4"
   }
 }
