--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"nodemon backend/server.js\" \"npm start --prefix client\""
+    "start": "concurrently \"nodemon server/server.js\" \"npm start --prefix client\"",
+    "data:import": "node server/seeder.js",
+    "data:destroy": "node server/seeder.js -d"
   },
   "author": "Berkay Yılmaz",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "express": "^4.19.2",
     "mongoose": "^8.5.1"
   },
